k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: 138973099853.dkr.ecr.ap-south-1.amazonaws.com/django-ecommerce:1.0
          ports:
            - containerPort: 8000
